--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-	background:url("http://hqwallpapersplus.com/wp-content/uploads/2013/11/Beautiful-Wallpaper-Backgrounds-5.jpg");
+	background:url("http://www.wallpapershdi.com/walls/2474/new-york-silhouette_1280x1024.jpg");
 	background-size: cover;
     background-position: center;
 	color:000033;
