--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-	background:url("http://www.wallpapershdi.com/walls/2474/new-york-silhouette_1280x1024.jpg");
+	background:url("http://p1.pichost.me/i/41/1650111.jpg");
 	background-size: cover;
     background-position: center;
 	color:000033;
